// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> matches render snapshot - login form, with no validation errors 1`] = `
<div
  id="sidebarPage"
>
  <div
    className="header_bar"
    id="header"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <img
            alt="Eat Drink Healthy logo"
            className="header_logo"
            src="/images/EDH-logo.png"
          />
          <span
            className="header_title"
          >
            EAT. DRINK. HEALTHY.
          </span>
        </div>
        <div
          className="col-xs-6"
        >
          <span
            className="header_menu"
          >
            <a
              className="btn solid_button"
              href="/"
              id="homeLink"
              onClick={[Function]}
            >
              Search
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-6 col-xs-offset-3"
      >
        <div
          className="pitch"
        >
          A platform to find, share, and discuss healthy places to shop and eat.
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2"
      >
        <div
          className="panel panel-default"
          id={undefined}
        >
          <div
            className="panel-heading"
          >
            Get Started
          </div>
          <div
            className="panel-body"
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="usernameEmail"
                >
                  Username / Email
                </label>
                <input
                  autoFocus={true}
                  className="form-control"
                  id="usernameEmail"
                  name="usernameEmail"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="loginPassword"
                >
                  Password
                </label>
                <input
                  autoFocus={undefined}
                  className="form-control"
                  id="loginPassword"
                  name="loginPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="password"
                  value=""
                />
              </div>
              <button
                className="btn btn-default"
                disabled={true}
                id="loginSubmit"
                type="submit"
              >
                Sign In
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Sidebar /> matches render snapshot - no action form 1`] = `
<div
  id="sidebarPage"
>
  <div
    className="header_bar"
    id="header"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <img
            alt="Eat Drink Healthy logo"
            className="header_logo"
            src="/images/EDH-logo.png"
          />
          <span
            className="header_title"
          >
            EAT. DRINK. HEALTHY.
          </span>
        </div>
        <div
          className="col-xs-6"
        >
          <span
            className="header_menu"
          >
            <a
              className="btn solid_button"
              href="/"
              id="homeLink"
              onClick={[Function]}
            >
              Search
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-6 col-xs-offset-3"
      >
        <div
          className="pitch"
        >
          A platform to find, share, and discuss healthy places to shop and eat.
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Sidebar /> matches render snapshot - signup form, with no validation errors 1`] = `
<div
  id="sidebarPage"
>
  <div
    className="header_bar"
    id="header"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <img
            alt="Eat Drink Healthy logo"
            className="header_logo"
            src="/images/EDH-logo.png"
          />
          <span
            className="header_title"
          >
            EAT. DRINK. HEALTHY.
          </span>
        </div>
        <div
          className="col-xs-6"
        >
          <span
            className="header_menu"
          >
            <a
              className="btn solid_button"
              href="/"
              id="homeLink"
              onClick={[Function]}
            >
              Search
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-6 col-xs-offset-3"
      >
        <div
          className="pitch"
        >
          A platform to find, share, and discuss healthy places to shop and eat.
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2"
      >
        <div
          className="panel panel-default"
          id={undefined}
        >
          <div
            className="panel-heading"
          >
            Get Started
          </div>
          <div
            className="panel-body"
          >
            <form
              className="measure center"
              onSubmit={[Function]}
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="username"
                >
                  Username
                </label>
                <input
                  autoFocus={true}
                  className="form-control"
                  id="username"
                  name="username"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="email"
                >
                  Email
                </label>
                <input
                  autoFocus={undefined}
                  className="form-control"
                  id="email"
                  name="email"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="email"
                  value=""
                />
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="password"
                >
                  Password
                </label>
                <input
                  autoFocus={undefined}
                  className="form-control"
                  id="password"
                  name="password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="password"
                  value=""
                />
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="confirmPassword"
                >
                  Confirm Password
                </label>
                <input
                  autoFocus={undefined}
                  className="form-control"
                  id="confirmPassword"
                  name="confirmPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="password"
                  value=""
                />
              </div>
              <button
                className="btn btn-default"
                disabled={true}
                id="createAccountSubmit"
                type="submit"
              >
                Create Account
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
